--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.7.3",
     "hypertrack-views-react": "^1.1.30",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
