--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "react-service-worker": "^0.1.1",
     "react-syntax-highlighter": "^15.2.1",
     "web-vitals": "^0.2.4"
   },
